--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </tr>
                 <tr>
                 <td> Mysłowice</td>
-                <td> <img src=myslowice.jpg width="200" height="200" /></td>
+                <td> <img src=Myslowice.jpg width="200" height="200" /></td>
                 </tr>
                 </table>
                 
